--- a/f&r/dash.html
+++ b/f&r/dash.html
@@ -654,7 +654,7 @@ const beforeUnloadHandler = (event) => {
 };
 window.addEventListener("beforeunload", beforeUnloadHandler);
 
-sendnotification("Nitheesh R L","Dashboard opened by "+uuuusername)
+sendnotification("Nitheesh R L","Dashboard opened by "+uuuusername,"member")
    </script>
 
 </html>
