--- a/f&r/index.html
+++ b/f&r/index.html
@@ -681,6 +681,7 @@ console.log(details)
    document.getElementById("message").textContent =
    "Failed to fetch.";
    document.getElementById("message").style.display = "block";
+   fetchd ();
    });
       }
    fetchd ();
