--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -297,6 +297,12 @@ function togglePopup3(){
 
 </head>
 <body>
+  <div class="internetstatus-box" id="internetstatus-box">
+    <div class="internetstatus" id="internetstatus">
+      <span>You are Online</span>
+    </div>
+  </div>
+  <script src="common.js"></script>
   <nav id="sidebar">
     <ul>
       <li class="indetails" id="insname">
