--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -81,6 +81,12 @@ document.getElementById("popup-3").classList.toggle("active");
 </script>
 </head>
 <body>
+  <div class="internetstatus-box" id="internetstatus-box">
+    <div class="internetstatus" id="internetstatus">
+      <span>You are Online</span>
+    </div>
+  </div>
+  <script src="common.js"></script>
   <nav id="sidebar">
     <ul>
       <li class="indetails" id="insname">
