--- a/f&r/change-pass-1.html
+++ b/f&r/change-pass-1.html
@@ -415,6 +415,7 @@ function togglePopup3(){
    document.getElementById("mname").innerHTML = uname;
   if (uname==undefined){
      alert("You are not logged in. Please log in");
+     sessionStorage.setItem("lastpage",window.location.pathname)
      window.location="../index.html";
    }
 const  GetUniqueID = () =>{
@@ -819,9 +820,19 @@ else{
  });
  }
 
-setInterval(() => {
-updatelogstatus();
-}, 500)
+ updatelogstatus("Online");
+
+window.addEventListener("blur", () => {
+  updatelogstatus("Offline");   
+  });
+  window.addEventListener("focus", () => {
+  updatelogstatus("Online");   
+  });
+//window.unblur = colse();
+const beforeUnloadHandler = (event) => {  
+  updatelogstatus("Offline");  
+};
+window.addEventListener("beforeunload", beforeUnloadHandler);
  </script>
 <script src="scriptform.js"></script>
 </html>
