--- a/f&r/edit-companies.html
+++ b/f&r/edit-companies.html
@@ -721,6 +721,7 @@ document.getElementById("noti-text-date").value = "";
    document.getElementById("mname").innerHTML = uname;
    if (idvalue == undefined||uname==undefined){
      alert("You are not logged in. Please log in");
+     sessionStorage.setItem("lastpage",window.location.pathname)
      window.location="../index.html";
    }
  
