--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -1210,6 +1210,7 @@ else if (html[j+4][1]=="File Upload"){
    document.getElementById("mname").innerHTML = uname;
   if (uname==undefined){
      alert("You are not logged in. Please log in");
+     sessionStorage.setItem("lastpage",window.location.pathname)
      window.location="../index.html";
    }
 const  GetUniqueID = () =>{
