--- a/index.html
+++ b/index.html
@@ -169,9 +169,13 @@ document.getElementById("message").textContent="Logged in Successful";
 setTimeout(function () { 
   document.getElementById("load").style.display="none";
   var enusername = document.getElementById("Username").value;
-  
-
-  window.location="f&r/dash.html"
+  var lastpage = sessionStorage.getItem("lastpage");
+if (lastpage==undefined||lastpage==""){
+  window.location="f&r/dash.html";
+}
+else{
+  window.location=lastpage;
+}
  },2000);
 }
 else{
@@ -221,9 +225,13 @@ document.getElementById("message").textContent="Logged in Successful";
 setTimeout(function () { 
   document.getElementById("load").style.display="none";
   var enusername = document.getElementById("Username").value;
-  
-
-  window.location="f&r/dash.html"
+  var lastpage = sessionStorage.getItem("lastpage");
+if (lastpage==undefined||lastpage==""){
+  window.location="f&r/dash.html";
+}
+else{
+  window.location=lastpage;
+}
  },2000);
 }
 function getuserdetails(user,pass){
