--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ if (lastpage==undefined||lastpage==""){
 }
 else{
   window.location=lastpage;
+  sessionStorage.removeItem("lastpage");
 }
  },2000);
 }
@@ -231,6 +232,7 @@ if (lastpage==undefined||lastpage==""){
 }
 else{
   window.location=lastpage;
+  sessionStorage.removeItem("lastpage");
 }
  },2000);
 }
