--- a/f&r/index.html
+++ b/f&r/index.html
@@ -901,5 +901,5 @@ const beforeUnloadHandler = (event) => {
 };
 window.addEventListener("beforeunload", beforeUnloadHandler);
    </script>
-
+<script src="scriptform.js"></script>
 </html>
