--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -1503,4 +1503,5 @@ window.addEventListener("beforeunload", beforeUnloadHandler);
     }
     
     </script>
+    <script src="scriptform.js"></script>
 </html>
