--- a/f&r/past.html
+++ b/f&r/past.html
@@ -881,5 +881,5 @@ if (tdata.includes(sdata)){
   };
   window.addEventListener("beforeunload", beforeUnloadHandler);
      </script>
-
+<script src="scriptform.js"></script>
 </html>
