--- a/f&r/dash.html
+++ b/f&r/dash.html
@@ -669,5 +669,5 @@ const beforeUnloadHandler = (event) => {
 window.addEventListener("beforeunload", beforeUnloadHandler);
 
    </script>
-
+<script src="scriptform.js"></script>
 </html>
