--- a/f&r/edit-companies.html
+++ b/f&r/edit-companies.html
@@ -487,6 +487,7 @@ document.getElementById("popup-11").classList.toggle("active");
   
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
+<script src="scriptform.js"></script>
 <script>
     var porfilepicback = sessionStorage.getItem("backprofilepic");
   if (porfilepicback!==null){
