--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -732,7 +732,7 @@ alert("PassKey is already created for this Device")
    }
    document.getElementById("load").style.display="initial";
            document.getElementById("loader").style.display="block"; 
-           document.getElementById("message").textContent = "User Details Fetching....";
+           document.getElementById("message").textContent = "Students Details Fetching....";
            var allotdiv;
            var vdatas = [];
            var vheads = [];
@@ -740,7 +740,7 @@ alert("PassKey is already created for this Device")
            var umembers = [];
            var uongoing="";
            function fetchd (){
-  console.log("User Details Fetching....")
+  console.log("Students Details Fetching....")
 var loggedname = localStorage.getItem("loggedname");
     var formDataString =loggedname;
     console.log(formDataString)
