--- a/f&r/all-musers.html
+++ b/f&r/all-musers.html
@@ -1025,7 +1025,7 @@ vheads.push(updatas[f].name)
   }
   else if(r=="reject"){
     document.getElementById("loader").style.display="none"; 
-     document.getElementById("message").textContent = "ID Number already present. So, Member not added";
+     document.getElementById("message").textContent = "Member already present. So, Member not added";
     document.getElementById("message").style.display = "block";
      setTimeout(function () { document.getElementById("load").style.display="none";
    uongoing="";
