--- a/logout.html
+++ b/logout.html
@@ -7,7 +7,13 @@
     <link rel="icon" href="white_logo.png" type="image/x-icon">
     <title>Logout Successfully</title>  
     <link rel="stylesheet" href="style.css" />
-
+<script>
+    localStorage.removeItem("loggedname");
+  localStorage.removeItem("loggeduorp");
+  localStorage.removeItem("loggedpic");
+  localStorage.removeItem("loggedmail");
+  localStorage.removeItem("loggeduserdetails");
+</script>
 </head>    
 <body>
 
