--- a/f&r/all-musers.html
+++ b/f&r/all-musers.html
@@ -341,23 +341,23 @@ document.getElementById("popup-40").classList.toggle("active");
             <h1>Edit User Details</h1>
             <div class="form-element">
               <span class="q">Name</span>
-              <input required type="text" name="Name"   placeholder="Enter your Name" />
+              <input readonly type="text" name="Name"   placeholder="Enter your Name" />
               </div>
 
               
               <div class="form-element">
               <span class="q">Email ID</span>
-              <input required type="text" name="Email ID"  placeholder="Enter your Email ID" />
+              <input type="text" name="Email ID"  placeholder="Enter your Email ID" />
               </div>
               
 
               <div class="form-element">
                 <span class="q">Batch</span>
-                <input required type="text" name="Batch"  placeholder="Enter your Batch" />
+                <input type="text" name="Batch"  placeholder="Enter your Batch" />
                 </div>
                 <div class="form-element">
                   <span class="q">UG or PG</span>
-                  <select required name="UG or PG" >
+                  <select name="UG or PG" >
                     <option value="">Select the UG or PG</option>
                     <option value="B.Tech">B.Tech</option>
                     <option value="M.Tech">M.Tech</option>
@@ -365,7 +365,7 @@ document.getElementById("popup-40").classList.toggle("active");
                   </div>
               <div class="form-element">
                 <span class="q">Role</span>
-                <select required name="Role" >
+                <select name="Role" >
                   <option value="">Select the Role</option>
                   <option value="User">User</option>
                   <option value="Admin">Admin</option>
