--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       var oldname = localStorage.getItem("loggedname");
       console.log(oldname)
       if(oldname !== null){
-        //window.location="f&r/dash.html"
+        window.location="f&r/dash.html"
       }
     </script>
 </head>    
