--- a/f&r/index.html
+++ b/f&r/index.html
@@ -734,7 +734,7 @@ if (tdata.includes(sdata)){
    console.error(error);
    document.getElementById("loader").style.display="none"; 
    document.getElementById("message").textContent =
-   "Failed to fetch.";
+   "Failed to Process the Request. Please try again later.";
    document.getElementById("message").style.display = "block";
    });
    }
