--- a/preview-form/index.html
+++ b/preview-form/index.html
@@ -227,7 +227,9 @@ console.log(pair[0])
         }}
 
         var formDataString = keyValuePairs.join("=namff=");
-console.log(formDataString)
+        var rid  = localStorage.getItem("loggeduserdetails");
+        var uid = JSON.parse(rid).id;
+console.log(formDataString+"=sheetid="+sheetname+"=sheetid="+uid+"=sheetid="+idvalue)
 
         // Send a POST request to your Google Apps Script
         fetch(
@@ -235,7 +237,7 @@ console.log(formDataString)
           {
             redirect: "follow",
             method: "POST",
-            body: formDataString+"=sheetid="+sheetname,
+            body: formDataString+"=sheetid="+sheetname+"=sheetid="+uid+"=sheetid="+idvalue,
             headers: {
               "Content-Type": "text/plain;charset=utf-8",
             },
@@ -255,10 +257,11 @@ console.log(formDataString)
           .then(async function (data) {
             const result1 = await data.json();
             console.log(result1.data2);
-            if (result1.data2 == "accept"){
+            if (result1.data2[0] == "accept"){
             // Display a success message
             document.getElementById("bt").disabled = false;
             document.getElementById("form").reset();
+            sessionStorage.setItem("frefid",result1.data2[1])
             window.location='submission.html';
             setTimeout(function () {
               document.getElementById("message").textContent = "";
