--- a/preview-placement-form/index.html
+++ b/preview-placement-form/index.html
@@ -392,7 +392,10 @@ document.getElementById("form").addEventListener("submit", function (e) {
 console.log(pair[0])
         }}
 
-        var formDataString = keyValuePairs.join("=namff=");
+        var rformDataString = keyValuePairs.join("=namff=");
+        var rid  = localStorage.getItem("loggeduserdetails");
+        var uid = JSON.parse(rid).id;
+        var formDataString = rformDataString+"=sheetid="+sheetname+"=sheetid="+uid+"=sheetid="+idvalue
 console.log(formDataString)
 
         // Send a POST request to your Google Apps Script
@@ -401,7 +404,7 @@ console.log(formDataString)
           {
             redirect: "follow",
             method: "POST",
-            body: formDataString+"=sheetid="+sheetname,
+            body: formDataString,
             headers: {
               "Content-Type": "text/plain;charset=utf-8",
             },
@@ -421,10 +424,11 @@ console.log(formDataString)
           .then(async function (data) {
             const result1 = await data.json();
             console.log(result1.data2);
-            if (result1.data2 == "accept"){
+            if (result1.data2[0] == "accept"){
             // Display a success message
             document.getElementById("bt").disabled = false;
             document.getElementById("form").reset();
+            sessionStorage.setItem("frefid",result1.data2[1])
             window.location='submission.html';
             setTimeout(function () {
               document.getElementById("message").textContent = "";
