--- a/f&r/change-pass-1.html
+++ b/f&r/change-pass-1.html
@@ -557,7 +557,7 @@ setTimeout(function () {
   localStorage.setItem("loggedname", setname);
   }
   sessionStorage.removeItem("setname");
-  window.location="index.html"
+  window.location="dash.html"
  },2000);
 }
 function getuserdetails1(user,pass,salt){
