--- a/index.html
+++ b/index.html
@@ -122,13 +122,7 @@ return uniqueID;
         const { startRegistration, startAuthentication } = SimpleWebAuthnBrowser;
  var fetchurl = "https://passkey-5ev6.onrender.com";
 const userId = document.getElementById("Username").value;
-if (userId ==""){
-    alert("Select the Name")
-}
-else{
-          var passdevuniid =GetUniqueID();
-           console.log(passdevuniid);
-if (passdevuniid !== "Not"){
+
     document.getElementById("loader").style.display="block"; 
             document.getElementById("load").style.display="initial";
             document.getElementById("message").textContent="Verifying PassKey....";
@@ -140,7 +134,7 @@ if (passdevuniid !== "Not"){
                headers: {
                    'Content-Type': 'application/json'
                },
-               body: JSON.stringify({ userId, weburl })
+               body: JSON.stringify({ weburl })
            })
 
            const challengeResult = await response.json()
@@ -156,12 +150,12 @@ if (passdevuniid !== "Not"){
                headers: {
                    'Content-Type': 'application/json'
                },
-               body: JSON.stringify({ userId:userId, cred: authenticationResult, challenge: options.challenge, devUniId:passdevuniid, weburl, urlorigin})
+               body: JSON.stringify({ cred: authenticationResult, challenge: options.challenge,  weburl, urlorigin})
            })
            const verifyuserResult = await veruser.json()
            console.log(verifyuserResult)
 if (verifyuserResult.success){
-  localStorage.setItem("loggedname", userId);
+  localStorage.setItem("loggedname",verifyuserResult.userId);
   var  uname = localStorage.getItem("loggedname");
   console.log(uname)
 document.getElementById("loader").style.display="none"; 
@@ -184,11 +178,7 @@ else{
   document.getElementById("load").style.display="none";
 }
        }
-else {
-    alert("PassKey is Not Available in this Device")
-  }
-}
-}
+
   function showpass(){
     var btn = document.getElementById("Password").type ;
 
