--- a/f&r/change-pass-1.html
+++ b/f&r/change-pass-1.html
@@ -675,7 +675,7 @@ else{
 }
 </script>
 <script>
-  function updatelogstatus(){
+ /* function updatelogstatus(){
     var updatestring = localStorage.getItem("loggedname");
 
          
@@ -729,7 +729,7 @@ window.addEventListener("blur", () => {
 const beforeUnloadHandler = (event) => {  
   updatelogstatus("Offline");  
 };
-window.addEventListener("beforeunload", beforeUnloadHandler);
+window.addEventListener("beforeunload", beforeUnloadHandler);*/
  </script>
 
 </html>
