--- a/f&r/edit-companies.html
+++ b/f&r/edit-companies.html
@@ -620,7 +620,7 @@ document.getElementById("noti-text-date").value = "";
       
    </script>
    <script>
-    function updatelogstatus(status){
+    /*function updatelogstatus(status){
       var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
@@ -676,7 +676,7 @@ window.addEventListener("blur", () => {
 const beforeUnloadHandler = (event) => {  
   updatelogstatus("Offline");  
 };
-window.addEventListener("beforeunload", beforeUnloadHandler);
+window.addEventListener("beforeunload", beforeUnloadHandler);*/
    </script>
 
 </html>
