--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -2185,7 +2185,7 @@ lastoption[lastoption.length-3].children[0].children[0].value=value
   }
 </script>
 <script>
-    function updatelogstatus(status){
+   /* function updatelogstatus(status){
       var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
@@ -2243,7 +2243,7 @@ window.addEventListener("blur", () => {
 const beforeUnloadHandler = (event) => {  
   updatelogstatus("Offline");  
 };
-window.addEventListener("beforeunload", beforeUnloadHandler);
+window.addEventListener("beforeunload", beforeUnloadHandler);*/
 
 
    </script>
