--- a/f&r/past.html
+++ b/f&r/past.html
@@ -713,7 +713,7 @@ if (tdata.includes(sdata)){
    }
    </script>
     <script>
-      function updatelogstatus(status){
+     /* function updatelogstatus(status){
         var updatestring = localStorage.getItem("loggedname")+"/"+status;
    
              
@@ -774,7 +774,7 @@ if (tdata.includes(sdata)){
   const beforeUnloadHandler = (event) => {  
     updatelogstatus("Offline");  
   };
-  window.addEventListener("beforeunload", beforeUnloadHandler);
+  window.addEventListener("beforeunload", beforeUnloadHandler);*/
      </script>
 
 </html>
