--- a/f&r/dash.html
+++ b/f&r/dash.html
@@ -504,7 +504,7 @@ alert("PassKey is already created for this Device")
       
    </script>
    <script>
-    function updatelogstatus(status){
+   /* function updatelogstatus(status){
       var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
@@ -560,7 +560,7 @@ window.addEventListener("blur", () => {
 const beforeUnloadHandler = (event) => {  
   updatelogstatus("Offline");  
 };
-window.addEventListener("beforeunload", beforeUnloadHandler);
+window.addEventListener("beforeunload", beforeUnloadHandler);*/
 
    </script>
 
