--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -2132,7 +2132,7 @@ lastoption[lastoption.length-3].children[0].children[0].value=value
   }
 </script>
 <script>
-    function updatelogstatus(status){
+   /* function updatelogstatus(status){
       var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
@@ -2190,7 +2190,7 @@ window.addEventListener("blur", () => {
 const beforeUnloadHandler = (event) => {  
   updatelogstatus("Offline");  
 };
-window.addEventListener("beforeunload", beforeUnloadHandler);
+window.addEventListener("beforeunload", beforeUnloadHandler);*/
    </script>
     <script>
     const keyvaluess = window.location.search;
