--- a/f&r/edit-notification.html
+++ b/f&r/edit-notification.html
@@ -554,7 +554,7 @@ alert("PassKey is already created for this Device")
       
    </script>
    <script>
-    function updatelogstatus(status){
+  /*  function updatelogstatus(status){
       var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
@@ -610,7 +610,7 @@ window.addEventListener("blur", () => {
 const beforeUnloadHandler = (event) => {  
   updatelogstatus("Offline");  
 };
-window.addEventListener("beforeunload", beforeUnloadHandler);
+window.addEventListener("beforeunload", beforeUnloadHandler);*/
    </script>
 <script>
   // JavaScript to handle the dropdown behavior and collect selected values
