--- a/f&r/index.html
+++ b/f&r/index.html
@@ -741,7 +741,7 @@ if (tdata.includes(sdata)){
 
    </script>
    <script>
-    function updatelogstatus(status){
+   /* function updatelogstatus(status){
       var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
@@ -802,7 +802,7 @@ window.addEventListener("blur", () => {
 const beforeUnloadHandler = (event) => {  
   updatelogstatus("Offline");  
 };
-window.addEventListener("beforeunload", beforeUnloadHandler);
+window.addEventListener("beforeunload", beforeUnloadHandler);*/
    </script>
 
 </html>
