--- a/f&r/new-placement-form.html
+++ b/f&r/new-placement-form.html
@@ -950,7 +950,7 @@ console.log(formDataString+"=sheetid="+loggedname+"=sheetid="+formname+"=sheetid
 
 </script>
 <script>
-    function updatelogstatus(status){
+  /*  function updatelogstatus(status){
       var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
@@ -1011,7 +1011,7 @@ window.addEventListener("blur", () => {
 const beforeUnloadHandler = (event) => {  
   updatelogstatus("Offline");  
 };
-window.addEventListener("beforeunload", beforeUnloadHandler);
+window.addEventListener("beforeunload", beforeUnloadHandler);*/
    </script>
 <script src="scriptplaceform.js  "></script>
 
