--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -1289,7 +1289,7 @@ setInterval(() => {
 
    </script>
     <script>
-      function updatelogstatus(status){
+    /*  function updatelogstatus(status){
         var updatestring = localStorage.getItem("loggedname")+"/"+status;
    
              
@@ -1350,7 +1350,7 @@ setInterval(() => {
   const beforeUnloadHandler = (event) => {  
     updatelogstatus("Offline");  
   };
-  window.addEventListener("beforeunload", beforeUnloadHandler);
+  window.addEventListener("beforeunload", beforeUnloadHandler);*/
      </script>
 <script>
   // JavaScript to handle the dropdown behavior and collect selected values
