--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -1259,7 +1259,7 @@ setInterval(() => {
 }, 1000)
    </script>
    <script>
-    function updatelogstatus(status){
+   /* function updatelogstatus(status){
       var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
@@ -1320,7 +1320,7 @@ window.addEventListener("blur", () => {
 const beforeUnloadHandler = (event) => {  
   updatelogstatus("Offline");  
 };
-window.addEventListener("beforeunload", beforeUnloadHandler);
+window.addEventListener("beforeunload", beforeUnloadHandler);*/
    </script>
    <script>
     // JavaScript to handle the dropdown behavior and collect selected values
