--- a/f&r/dash.html
+++ b/f&r/dash.html
@@ -419,7 +419,7 @@ async function passkey(){
 
            const passkeycheck = await response.json()
            console.log(passkeycheck)
-           const { no } = challengeResult // Server side challenge
+           const { no } = passkeycheck// Server side challenge
 if (no ==  0){
  document.getElementById("loader").style.display="block"; 
            document.getElementById("load").style.display="initial";
