--- a/f&r/all-musers.html
+++ b/f&r/all-musers.html
@@ -367,6 +367,10 @@ document.getElementById("popup-40").classList.toggle("active");
                 <input required type="text" name="Name"   placeholder="Enter the Name" />
                 </div>
                 <div class="form-element">
+                  <span class="q">ID Number</span>
+                  <input required type="text" name="Member ID"  placeholder="Enter the Member ID Number" />
+                  </div>
+                <div class="form-element">
                   <span class="q">Email ID</span>
                   <input required type="text" name="Email ID"  placeholder="Enter the Email ID" />
                   </div>
