--- a/f&r/all-musers.html
+++ b/f&r/all-musers.html
@@ -813,8 +813,8 @@ var vheads = [];
             }
        
             else{
-              if((updatas[f].name=="Email ID"||updatas[f].name=="Alloted Notification Mail Address")&&!updatas[f].value.includes("@")){
-              alert("Enter the valid"+updatas[f].name);
+              if((updatas[f].name=="Email ID"||updatas[f].name=="Alloted Notification Mail Address")&&(!updatas[f].value.includes("@")||!updatas[f].value.includes("."))){
+              alert("Enter the valid "+updatas[f].name);
               return;
             }
 values.push(updatas[f].value)
