--- a/f&r/all-musers.html
+++ b/f&r/all-musers.html
@@ -302,7 +302,7 @@ document.getElementById("popup-40").classList.toggle("active");
 
               <div class="form-element">
                 <span class="q">Batch</span>
-                <input  type="text" name="Batch"  placeholder="Enter your Batch" />
+                <input  type="number" name="Batch"  placeholder="Enter your Batch" />
                 </div>
                 <div class="form-element">
                   <span class="q">UG or PG</span>
@@ -378,7 +378,7 @@ document.getElementById("popup-40").classList.toggle("active");
 
                 <div class="form-element">
                   <span class="q">Batch</span>
-                  <input required type="text" name="Batch"  placeholder="Enter the Batch" />
+                  <input required type="number" name="Batch"  placeholder="Enter the Batch" />
                   </div>
                   <div class="form-element">
                     <span class="q">UG or PG</span>
